--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,10 @@ crash.*.log
 *.tfvars
 *.tfvars.json
 
+# Ignore xx
+
+*.xx
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
